@@ -8,6 +8,7 @@ Version: 2.0.6
     - Fixed list of valid inputs for Tiberium Reprocessor being blank
     - Fixed missing sounds
     - Fixed Growth Accelerator not accepting quality Tiberium Substrate
+    - Fixed Tiberium Monocultures not allowing quality recipes
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.5
   Bugfixes:
